Fixed utility scrollbar appearing. Added vikeys for board scrolling. Fix linewall rendering error. Prevent key shortcuts when search input has focus. Add history support to file viewer

--- a/z2_site/static/css/style.css
+++ b/z2_site/static/css/style.css
@@ -391,7 +391,6 @@ div.file-details ul
 
 .featured-description
 {
-    flex:0 0 100%;
     padding:0;
 }
 
